# RL-Navigation

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  fast.yaml
demo/: app.py
notebooks/: quick_start.ipynb
scripts/: evaluate.py  train.py
src/rl_navigation/: __init__.py  utils.py
src/rl_navigation/algorithms/: dqn.py
src/rl_navigation/buffers/: __init__.py
src/rl_navigation/envs/: __init__.py  navigation_env.py
src/rl_navigation/models/: __init__.py
tests/: test_rl_navigation.py
